--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "use-debounce": "^10.0.5"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@tanstack/react-query-devtools": "^5.83.0",
+    "@types/axios": "^0.9.36",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
