--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/axios": "^0.9.36",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-paginate": "^7.1.4",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
